<resources>
    <string name="app_name">TesterHome</string>
    <string name="action_settings">Settings</string>

    <string name="main_tab_home">社区</string>
    <string name="main_tab_category">分类导航</string>
    <string name="main_tab_topic">话题</string>
    <string name="main_tab_job">招聘</string>
    <string name="main_tab_mooc">公开课</string>
    <string name="main_tab_bugs">臭虫广播站</string>

    <string name="main_drawer_wiki">Wiki</string>
    <string name="main_drawer_settings">设置</string>
    <string name="main_drawer_about">关于</string>
</resources>
